--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Equipe Alura Start</title>
+<title>marcas esportivas</title>
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,22 +12,22 @@
 </head>
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+<img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da marcas esportivas">
 <ul class="cabecalho-lista">
-<li class="cabecalho-lista-item">Escola</li>
-<li class="cabecalho-lista-item">Estudante</li>
+<li class="cabecalho-lista-item">esporte</li>
+<li class="cabecalho-lista-item">marcas</li>
 </ul>
 </header>
 <section class="escola">
 <div class="escola-div-conteudo">
-<h2 class="escola-titulo"> Sobre a Escola </h2>
-<p class="escola-texto-um"> A Escola Alura foi fundada em 2010 e tem como objetivo ensinar
+<h2 class="escola-titulo"> Sobre as marcas esportivas</h2>
+<p class="escola-texto-um"> As marcas mais conhecidas são a Nike, Adidas, Umbro e Mizuno
 
-Pensamento Computacional, através do ensino de Programação. </p>
-<p class="escola-texto-dois"> A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super
-unidos e a turma favorita por todos os professores e professoras que nos ajudam! </p>
+as marcas abrangem bastante materiais esportivos como chuteira, tênis e diversas roupas. </p>
+<p class="escola-texto-dois"> A marca mais utilizada e famosa é a Nike, Umbro e a Adidas, marcas onde a maioria 
+dos atletas profissionais e clubes tem o patrocínio. </p>
 </div>
-<img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala
+<img class="escola-imagem" src="imagens/marcas.jpeg"imagem que representa uma professora em sala
 de aula">
 </section>
 <section class="estudante">
